--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@trpc/next": "^9.27.1",
 		"@trpc/react": "^9.27.1",
 		"@trpc/server": "^9.27.1",
+		"@types/slate-react": "^0.50.1",
 		"@upstash/redis": "^1.12.0",
 		"axios": "^0.27.2",
 		"next": "12.2.5",
@@ -46,6 +47,9 @@
 		"postcss": "^8.4.16",
 		"prisma": "^4.2.1",
 		"pusher": "^5.1.1-beta",
+		"slate": "^0.82.1",
+		"slate-history": "^0.66.0",
+		"slate-react": "^0.82.1",
 		"tailwindcss": "^3.1.8",
 		"ts-node": "^10.9.1",
 		"ts-open-graph-scraper": "^0.0.2",
