--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
 		"postinstall": "prisma generate"
 	},
 	"dependencies": {
+		"@formkit/auto-animate": "^1.0.0-beta.3",
 		"@next-auth/prisma-adapter": "^1.0.4",
 		"@prisma/client": "^4.2.1",
 		"@trpc/client": "^9.27.1",
 		"@trpc/next": "^9.27.1",
 		"@trpc/react": "^9.27.1",
 		"@trpc/server": "^9.27.1",
+		"@types/is-url": "^1.2.30",
 		"@types/slate-react": "^0.50.1",
 		"@upstash/redis": "^1.12.0",
 		"axios": "^0.27.2",
+		"is-url": "^1.2.4",
 		"next": "12.2.5",
 		"next-auth": "^4.10.3",
 		"pusher-js": "^7.4.0",
