--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
 		"@formkit/auto-animate": "^1.0.0-beta.3",
 		"@next-auth/prisma-adapter": "^1.0.4",
 		"@prisma/client": "^4.2.1",
-		"@trpc/client": "^9.27.1",
-		"@trpc/next": "^9.27.1",
-		"@trpc/react": "^9.27.1",
-		"@trpc/server": "^9.27.1",
+		"@tanstack/react-query": "^4.3.9",
+		"@trpc/client": "^10.0.0-proxy-beta.2",
+		"@trpc/next": "^10.0.0-proxy-beta.2",
+		"@trpc/react": "^10.0.0-proxy-beta.2",
+		"@trpc/server": "^10.0.0-proxy-beta.2",
 		"@types/is-url": "^1.2.30",
 		"@types/slate-react": "^0.50.1",
 		"@upstash/redis": "^1.12.0",
@@ -46,7 +47,6 @@
 		"eslint-config-next": "12.2.5",
 		"nodemon": "^2.0.19",
 		"npm-run-all": "^4.1.5",
-		"open-graph-scraper": "^4.11.1",
 		"postcss": "^8.4.16",
 		"prisma": "^4.2.1",
 		"pusher": "^5.1.1-beta",
