--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
 		"nodemon": "^2.0.19",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.16",
+		"prettier": "^2.7.1",
+		"prettier-plugin-tailwindcss": "^0.1.13",
 		"prisma": "^4.2.1",
 		"pusher": "^5.1.1-beta",
 		"slate": "^0.82.1",
